fix header add gap

--- a/lesson-13/css/style.css
+++ b/lesson-13/css/style.css
@@ -211,6 +211,7 @@
 .sub-header__container{
     display: flex;
     flex-wrap: wrap;
+    gap: 20px;
     justify-content: space-between;
     padding: 15px;
 }
@@ -281,6 +282,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    gap: 20px;
 }
 
 .header__left{
